force-app/main/default/objects/Conga_SOW_Detail__mdt/Conga_SOW_Detail__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to determine SOW text for IM Projects based on the use of smart catalog or special data entry.</description>
    <label>Conga - SOW Detail</label>
    <pluralLabel>Conga - SOW Details</pluralLabel>
</CustomObject>