force-app/main/default/objects/Conga_SOW_Detail__mdt/fields/Smart_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Smart_Catalog__c</fullName>
    <label>Smart Catalog</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>