force-app/main/default/objects/Conga_SOW_Detail__mdt/fields/SOW_Language__c.field-meta.xml
<CustomField>
    <fullName>SOW_Language__c</fullName>
    <label>SOW Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>