force-app/main/default/objects/Conga_SOW_Detail__mdt/fields/Special_DE__c.field-meta.xml
<CustomField>
    <fullName>Special_DE__c</fullName>
    <label>Special DE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>